--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="site.webmanifest">
   <!-- styles -->
   <link rel="stylesheet" href="styles/styles.css">
   <!-- scripts -->
@@ -21,19 +21,20 @@
   <header class="page-body__page-header page-header">
     <h1 class="visually-hidden">Самый популярный кошачий корм Cat Energy Pro</h1>
     <div class="page-header__wrapper">
-      <a class="page-header__logo page-logo" href="index.html" aria-label="Логотип Cat Energy">
+      <a class="page-header__logo logo logo--header" href="index.html" aria-label="Логотип Cat Energy">
         <picture>
-          <source media="(min-width: 1440px)" srcset="images/logo/page-logo-desktop.svg" width="202" height="59"
+          <source media="(min-width: 1440px)" srcset="images/logo/logo-header-desktop.svg" width="202" height="59"
             type="image/svg+xml">
-          <source media="(min-width: 768px)" srcset="images/logo/page-logo-tablet.svg" width="174" height="50"
+          <source media="(min-width: 768px)" srcset="images/logo/logo-header-tablet.svg" width="174" height="50"
             type="image/svg+xml">
-          <img class="page-logo__image" src="images/logo/page-logo-mobile.svg" alt="Логотип Cat Energy" width="190"
+          <img class="logo__icon" src="images/logo/logo-header-mobile.svg" alt="Логотип Cat Energy" width="190"
             height="38">
         </picture>
       </a>
-      <button class="page-header__button" type="button" aria-label="Открыть меню"></button>
+      <button class="page-header__button page-header__button--no-js page-header__button--js" type="button"
+        aria-label="Открыть меню"></button>
     </div>
-    <nav class="page-header__navigation navigation ">
+    <nav class="page-header__navigation navigation">
       <!-- no-js защита работы без JS -->
       <!-- closed закрытое меню -->
       <ul class="navigation__list navigation__list--closed navigation__list--no-js">
@@ -44,7 +45,7 @@
           <a class="navigation__link" href="catalog.html" aria-label="Каталог">Каталог продукции</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="form.html" aria-label="Подбор программы">Подбор программы</a>
+          <a class="navigation__link  navigation__link--current" href="form.html" aria-label="Подбор программы">Подбор программы</a>
         </li>
       </ul>
     </nav>
@@ -74,19 +75,19 @@
 
       <fieldset class="form__group group group--program">
         <legend class="group__name visually-hidden">Подобрать программу</legend>
-        <label class="group__control control" for="slim">
+        <label class="group__control control control--program" for="slim">
           <input class="visually-hidden control__input control__input--radio" type="radio" name="cat-program" id="slim"
             value="slim" checked aria-label="Похудение">
           <span class="control__mark control__mark--radio"></span>
           <span class="control__name control__name--radio">Похудение</span>
         </label>
-        <label class="group__control control" for="pro">
+        <label class="group__control control control--program" for="pro">
           <input class="visually-hidden control__input control__input--radio" type="radio" name="cat-program" id="pro"
             value="pro" aria-label="Набор массы">
           <span class="control__mark control__mark--radio"></span>
           <span class="control__name control__name--radio">Набор массы</span>
         </label>
-        <label class="group__control control" for="help">
+        <label class="group__control control control--program" for="help">
           <input class="visually-hidden control__input control__input--radio" type="radio" name="cat-program" id="help"
             value="help" aria-label="Не знаю (Нужен ваш совет)">
           <span class="control__mark control__mark--radio"></span>
@@ -96,15 +97,21 @@
       <fieldset class="form__group group group--contacts">
         <legend class="group__name visually-hidden">Контактные данные (владельца кота)</legend>
         <span class="group__title">Контактные данные (владельца кота)</span>
-        <label class="group__control control" for="owner-email">
+        <label class="group__control control control--contacts" for="owner-email">
           <span class="control__name">E-mail:*</span>
-          <input class="control__input control__input--text" type="email" name="email" id="owner-email"
+          <input class="control__input control__input--contacts" type="email" name="email" id="owner-email"
             placeholder="kuklachev@gmail.com" aria-label="E-mail" required>
+          <svg class="control__icon control__icon--email" width="18" height="14">
+            <use href="icons/stack.svg#form_icon-mail"></use>
+          </svg>
         </label>
-        <label class="group__control control" for="owner-phone">
+        <label class="group__control control control--contacts" for="owner-phone">
           <span class="control__name">Телефон:*</span>
-          <input class="control__input control__input--text control__input--phone" type="tel" name="owner-phone"
+          <input class="control__input control__input--contacts control__input--phone" type="tel" name="owner-phone"
             id="owner-phone" placeholder="8 (960) 900-60-90" aria-label="Телефон" required>
+          <svg class="control__icon control__icon--phone" width="22" height="22">
+            <use href="icons/stack.svg#form_icon-phone"></use>
+          </svg>
         </label>
       </fieldset>
 
@@ -118,25 +125,25 @@
       <fieldset class="form__group group group--additionally">
         <legend class="group__name visually-hidden">Дополнительно</legend>
         <span class="group__title">Дополнительно</span>
-        <label class="group__control control" for="sweetener">
+        <label class="group__control control control-additionally" for="sweetener">
           <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="sweetener"
             id="sweetener" value="yes" checked aria-label="Cахарозаменитель">
           <span class="control__mark control__mark--checkbox"></span>
           <span class="control__name control__name--checkbox">Cахарозаменитель</span>
         </label>
-        <label class="group__control control" for="water">
+        <label class="group__control control control-additionally" for="water">
           <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="water" id="water"
             value="yes" aria-label="Питьевая вода">
           <span class="control__mark control__mark--checkbox"></span>
           <span class="control__name control__name--checkbox">Питьевая вода</span>
         </label>
-        <label class="group__control control" for="milk">
+        <label class="group__control control control-additionally" for="milk">
           <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="milk" id="milk"
             value="yes" aria-label="Молоко">
           <span class="control__mark control__mark--checkbox"></span>
           <span class="control__name control__name--checkbox">Молоко</span>
         </label>
-        <label class="group__control control" for="vitamins">
+        <label class="group__control control control-additionally" for="vitamins">
           <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="vitamins"
             id="vitamins" value="yes" aria-label="Витамины">
           <span class="control__mark control__mark--checkbox"></span>
@@ -144,7 +151,7 @@
         </label>
       </fieldset>
 
-      <button class="form__button button" type="submit" aria-label="Отправить заявку">Отправить заявку</button>
+      <button class="page-main__form-button form__button button" type="submit" aria-label="Отправить заявку">Отправить заявку</button>
       <p class="form__text">* - Обязательные поля</p>
     </form>
     <section class="page-main__invite invite invite--second">
@@ -157,24 +164,39 @@
     </section>
   </main>
   <footer class="page-body__page-footer page-footer">
-    <a class="page-footer__logo logo" href="#" aria-label="Логотип Cat Energy">
-      <img class="logo__image" src="images/logo/footer-logo.svg" alt="Логотип Cat Energy" width="128" height="24">
+    <a class="page-footer__logo logo logo--footer" href="#" aria-label="Логотип Cat Energy">
+      <svg class="logo__icon" width="128" height="25">
+        <use href="icons/stack.svg#footer-logo"></use>
+      </svg>
     </a>
     <ul class="page-footer__social social">
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="VK"></a>
+        <a class="social__link" href="#" aria-label="VK">
+          <svg class="social__icon" width="28" height="22">
+            <use href="icons/stack.svg#social_vkontakte"></use>
+          </svg>
+        </a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="YouTube"></a>
+        <a class="social__link" href="#" aria-label="YouTube">
+          <svg class="social__icon" width="28" height="22">
+            <use href="icons/stack.svg#social_youtube"></use>
+          </svg>
+        </a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="Telegram"></a>
+        <a class="social__link" href="#" aria-label="Telegram">
+          <svg class="social__icon" width="28" height="22">
+            <use href="icons/stack.svg#social_telegram"></use>
+          </svg>
+        </a>
       </li>
     </ul>
-    <a class="page-footer__htmlacademy htmlacademy" href="#" aria-label="HTML Academy">
+    <a class="page-footer__htmlacademy htmlacademy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
       <p class="htmlacademy__text">HTML Academy</p>
-      <img class="htmlacademy__image" src="images/logo/html-academy.svg" alt="Логотип HTML Academy" width="27"
-        height="34">
+      <svg class="htmlacademy__icon" width="27" height="34">
+        <use href="icons/stack.svg#html-academy"></use>
+      </svg>
     </a>
   </footer>
 </body>
