--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="site.webmanifest">
   <!-- styles -->
   <link rel="stylesheet" href="styles/styles.css">
   <!-- scripts -->
@@ -21,13 +21,13 @@
   <header class="page-body__page-header page-header">
     <h1 class="visually-hidden">Самый популярный кошачий корм Cat Energy Pro</h1>
     <div class="page-header__wrapper">
-      <a class="page-header__logo page-logo" href="index.html" aria-label="Логотип Cat Energy">
+      <a class="page-header__logo logo logo--header" href="index.html" aria-label="Логотип Cat Energy">
         <picture>
-          <source media="(min-width: 1440px)" srcset="images/logo/page-logo-desktop.svg" width="202" height="59"
+          <source media="(min-width: 1440px)" srcset="images/logo/logo-header-desktop.svg" width="202" height="59"
             type="image/svg+xml">
-          <source media="(min-width: 768px)" srcset="images/logo/page-logo-tablet.svg" width="174" height="50"
+          <source media="(min-width: 768px)" srcset="images/logo/logo-header-tablet.svg" width="174" height="50"
             type="image/svg+xml">
-          <img class="page-logo__image" src="images/logo/page-logo-mobile.svg" alt="Логотип Cat Energy" width="190"
+          <img class="logo__icon" src="images/logo/logo-header-mobile.svg" alt="Логотип Cat Energy" width="190"
             height="38">
         </picture>
       </a>
@@ -39,7 +39,7 @@
       <!-- closed закрытое меню -->
       <ul class="navigation__list navigation__list--closed navigation__list--no-js">
         <li class="navigation__item">
-          <a class="navigation__link" href="index.html" aria-label="Главная">Главная</a>
+          <a class="navigation__link navigation__link--current" href="index.html" aria-label="Главная">Главная</a>
         </li>
         <li class="navigation__item">
           <a class="navigation__link" href="catalog.html" aria-label="Каталог">Каталог продукции</a>
@@ -73,22 +73,30 @@
         <img class="hero__image" src="images/hero/can-mobile@1x.png" srcset="images/hero/can-mobile@2x.png" width="280"
           height="270" alt="Фотография Cat Energy Pro Курица">
       </picture>
-      <a class="hero__button button" href="form.html" aria-label="Подобрать программу">Подобрать программу</a>
+      <a class="hero__button button button--auxiliary" href="form.html" aria-label="Подобрать программу">Подобрать программу</a>
     </section>
     <section class="page-main__programs programs">
       <h2 class="visually-hidden">Наши программы</h2>
       <ul class="programs__list">
-        <li class="programs__item">
+        <li class="programs__item programs__item--cat-back">
           <h3 class="programs__title">Похудение</h3>
           <p class="programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
             диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="programs__link" href="#" aria-label="Каталог slim">Каталог slim</a>
+          <a class="programs__link" href="#" aria-label="Каталог slim">Каталог slim
+            <svg class="programs__link-icon" width="24" height="12">
+              <use href="icons/stack.svg#icon-arrow"></use>
+            </svg>
+          </a>
         </li>
-        <li class="programs__item">
+        <li class="programs__item programs__item--cat-pro">
           <h3 class="programs__title">Набор массы</h3>
           <p class="programs__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет
             вашему коту нарастить необходимые мышцы!</p>
-          <a class="programs__link" href="#" aria-label="Каталог pro">Каталог pro</a>
+          <a class="programs__link" href="#" aria-label="Каталог pro">Каталог pro
+            <svg class="programs__link-icon" width="24" height="12">
+              <use href="icons/stack.svg#icon-arrow"></use>
+            </svg>
+          </a>
         </li>
       </ul>
     </section>
@@ -97,16 +105,16 @@
       <p class="functional__heading">Как это работает</p>
       <ol class="functional__list">
         <li class="functional__item">
-          <h3 class="functional__text">Функциональное питание содержит только полезные питательные вещества.</h3>
+          <h3 class="functional__text functional__text--leaf">Функциональное питание содержит только полезные питательные вещества.</h3>
         </li>
         <li class="functional__item">
-          <h3 class="functional__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</h3>
+          <h3 class="functional__text functional__text--cook">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</h3>
         </li>
         <li class="functional__item">
-          <h3 class="functional__text">Замените один-два приема обычной еды на наше функциональное питание.</h3>
+          <h3 class="functional__text functional__text--eat">Замените один-два приема обычной еды на наше функциональное питание.</h3>
         </li>
         <li class="functional__item">
-          <h3 class="functional__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</h3>
+          <h3 class="functional__text functional__text--scales">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</h3>
         </li>
       </ol>
     </section>
@@ -125,7 +133,7 @@
           <p class="example__definition">затрачено времени</p>
         </li>
       </ul>
-      <p class="example__description">Затраты на питание: 15 000 РУБ.</p>
+      <p class="example__description">Затраты на питание:<br class="example__description-wrapping"> 15 000 РУБ.</p>
       <div class="example__slider slider">
         <div class="slider__wrapper slider__wrapper-before">
           <picture>
@@ -161,37 +169,58 @@
               srcset="images/example/boris-after-mobile@2x.png" alt="Кот Борис после" width="280" height="256">
           </picture>
         </div>
-        <div class="slider__control"></div>
+        <button class="slider__control" type="button" aria-label="Управление слайдером">
+          <svg class="slider__thumb" width="40" height="40">
+            <use href="icons/stack.svg#thumb"></use>
+          </svg>
+        </button>
       </div>
     </section>
     <section class="page-main__invite invite">
       <h2 class="visually-hidden">Наш адрес в Санкт-Петербурге</h2>
       <div class="invite__wrapper">
         <p class="invite__heading">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
-        <h3 class="invite__text">ул. Большая<br>Конюшенная, д. 19/8<br>Санкт-Петербург</h3>
+        <h3 class="invite__text">ул. Большая<br>Конюшенная, д. 19/8<br>
+          <span  class="invite__text-city">Санкт-Петербург</span>
+        </h3>
       </div>
       <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/-/CDRPbIpb"></iframe>
     </section>
   </main>
   <footer class="page-body__page-footer page-footer">
-    <a class="page-footer__logo logo" href="#" aria-label="Логотип Cat Energy">
-      <img class="logo__image" src="images/logo/footer-logo.svg" alt="Логотип Cat Energy" width="128" height="24">
+    <a class="page-footer__logo logo logo--footer" href="#" aria-label="Логотип Cat Energy">
+      <svg class="logo__icon" width="128" height="25">
+        <use href="icons/stack.svg#logo-footer"></use>
+      </svg>
     </a>
     <ul class="page-footer__social social">
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="VK"></a>
+        <a class="social__link" href="#" aria-label="VK">
+          <svg class="social__icon" width="28" height="22">
+            <use href="icons/stack.svg#social_vkontakte"></use>
+          </svg>
+        </a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="YouTube"></a>
+        <a class="social__link" href="#" aria-label="YouTube">
+          <svg class="social__icon" width="28" height="22">
+            <use href="icons/stack.svg#social_youtube"></use>
+          </svg>
+        </a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="Telegram"></a>
+        <a class="social__link" href="#" aria-label="Telegram">
+          <svg class="social__icon" width="28" height="22">
+            <use href="icons/stack.svg#social_telegram"></use>
+          </svg>
+        </a>
       </li>
     </ul>
-    <a class="page-footer__htmlacademy htmlacademy" href="#" aria-label="HTML Academy">
+    <a class="page-footer__htmlacademy htmlacademy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
       <p class="htmlacademy__text">HTML Academy</p>
-      <img class="htmlacademy__image" src="images/logo/html-academy.svg" alt="Логотип HTML Academy" width="27"
-        height="34">
+      <svg class="htmlacademy__icon" width="27" height="34">
+        <use href="icons/stack.svg#html-academy"></use>
+      </svg>
     </a>
   </footer>
 </body>
