--- a/source/catalog.html
+++ b/source/catalog.html
@@ -50,7 +50,7 @@
       </ul>
     </nav>
   </header>
-  <main class="page-body__main page-main">
+  <main class="page-body__page-main page-main">
     <section class="page-main__catalog catalog">
       <h2 class="catalog__heading">Каталог продукции</h2>
       <ul class="catalog__list">
@@ -372,7 +372,7 @@
     <section class="page-main__subscription subscription">
       <h2 class="subscription__heading">Акции и новинки</h2>
       <p class="subscription__text">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
-      <form class="subscription__form form" action="https://echo.htmlacademy.ru/" method="post">
+      <form class="subscription__form form form-line" action="https://echo.htmlacademy.ru/" method="post">
         <label class="form__control control" for="owner-email">
           <input class="control__input control__input--medium" type="email" name="owner-email"
             id="owner-email" placeholder="kuklachev@gmail.com" aria-label="E-mail" required>
@@ -384,9 +384,13 @@
       <h2 class="visually-hidden">Наш адрес в Санкт-Петербурге</h2>
       <div class="invite__wrapper">
         <p class="invite__heading">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
-        <h3 class="invite__text">ул. Большая<br>Конюшенная, д. 19/8<br>Санкт-Петербург</h3>
+        <h3 class="invite__text">ул. Большая<br>Конюшенная, д. 19/8<br>
+          <span  class="invite__text-city">Санкт-Петербург</span>
+        </h3>
       </div>
-      <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/-/CDRPbIpb"></iframe>
+      <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A647e399ead918947560bdc80cedd01449838e7b7248188994db2e50c239c278f&amp;source=constructor" width="1280" height="720" style="border:0;"></iframe>
+      <!-- <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/?um=constructor%3A647e399ead918947560bdc80cedd01449838e7b7248188994db2e50c239c278f&amp;source=constructor" width="1280" height="720" style="border:0;"></iframe> -->
+      <!-- <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/-/CDRPbIpb"></iframe> -->
     </section>
   </main>
   <footer class="page-body__page-footer page-footer">
